autorensystem/js/simulator/view/timeline.css
#timelineContainer
{
    position: absolute;
    top: 100px;
    bottom: 90px;
    width: 100%;
    overflow: auto;
    padding: 10px 10px 20px;
    border-top: 1px solid lightgrey;
    border-bottom: 1px solid lightgrey;
    background-color: white;
}

#timelineName
{
    cursor: default;
}

#timelineTableWindow
{
    position: absolute;
    width: 100%;
    top: 50px;
    bottom: 0px;
    right: 0px;
    overflow: auto;
}

table#timelineTable,
table#timelineTable tbody,
table#timelineTable tr,
table#timelineTable td
{
    margin: 0px;
    padding: 0px;
    height: inherit;
    border-collapse: collapse;
}

table#timelineTable
{
    width: 100%;
    height: 100%;
    text-align: center;
}

table#timelineTable thead tr.timeline-header th:not(.timeline-step-label)
{
    text-align: center;
    border: 1px dotted lightgrey;
    cursor: pointer;
}

table#timelineTable tr.timeline-step
{
    height: 37px;
}

table#timelineTable td.timeline-step-label
{
    position: relative;
    height: inherit;
    width: 15px;
    border-style: solid none;
    margin: 0px;
    padding: 5px;
    font-size: small;
    vertical-align: middle;
    cursor: pointer;
}
table#timelineTable tr:first-of-type td.timeline-step-label,
table#timelineTable tr:last-of-type td.timeline-step-label,
table#timelineTable th.timeline-step-label
{
    border-style: none;
}


table#timelineTable tr.timeline-step.copied-step
{
    border: 3px dotted grey;
}
table#timelineTable tr.timeline-step.copied-step td.timeline-cell
{
    border-top: 3px dotted grey;
    border-bottom: 3px dotted grey;
}
table#timelineTable tr.timeline-step.copied-step,
table#timelineTable tr.timeline-step.copied-step td.timeline-cell
{
    background-image: repeating-linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1));
}

table#timelineTable tr.timeline-step.selected-step
{
    border: 1px dotted black;
}
table#timelineTable tr.timeline-step.selected-step,
table#timelineTable tr.timeline-step.selected-step td.timeline-cell
{
    background-image: repeating-linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.2));
}
table#timelineTable tr.timeline-step.selected-step td.timeline-step-label
{
    font-weight: 900;
    color: black;
    margin: 5px;
}
/* makes the little arrow indicating selected step */
table#timelineTable tr.timeline-step.selected-step.simulated-situation td.timeline-step-label:before
{
    content: '';
    display: block;
    position: absolute;
    left: 0px;
    width: 0;
    height: 0;
    border-bottom: 10px solid transparent;
    border-top: 10px solid transparent;
    border-left: 10px solid darkcyan;
    border-right: 10px solid transparent;
    opacity: 0.5;
}



table#timelineTable tr.timeline-step > td.timeline-cell
{
    min-width: 75px;
    max-width: 75px;
    border-top: 1px solid;
    border-bottom: 1px solid;
    border-left: 2px solid;
    border-right: 2px solid;
    cursor: copy;
    opacity: 0.2;
}


table#timelineTable .timeline-cell-buffer
{
    min-width: 1px;
    max-width: 1px;
}

table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_SCENARIO]
{
    background-color: #3287C8;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_PERSONAL]
{
    background-color: #AF46C8;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_SITUATIONAL]
{
    background-color: #91F52D;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_TECHNICAL]
{
    background-color: #969696;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_PHYSICAL]
{
    background-color: #FADC3C;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_LOCATION]
{
    background-color: #F03C32;
}


table#timelineTable tr.timeline-step > td.finished-units
{
    opacity: .4;
}

table#timelineTable tr.timeline-step > td.timeline-cell-marked 
{
    opacity: 0.8;
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied
{
    width: inherit;
    position: relative;
    border-top: hidden;
    border-bottom: hidden;
    border-left: 2px solid;
    border-right: 2px solid;
    opacity: 1;
    cursor: move;
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied.copied-event
{
    border: 3px dotted grey;
    background-image: repeating-linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1));
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied.timeline-cell-invisible 
{
    background-image: repeating-linear-gradient( 62deg, transparent 5%, white 10%, transparent 15%);
}

table#timelineTable tr.timeline-step > td.timeline-cell > a
{
    color: black;
    font-size: 13px;
    /*padding-left: 3px;
    padding-right: 3px;
    margin: 1px 0px;*/
    margin: 3px;
    display: inline;
    cursor: pointer;
    vertical-align: text-top;
}
table#timelineTable tr.timeline-step > td.timeline-cell > a:first-of-type
{
    padding-left: 0px;
}
table#timelineTable tr.timeline-step > td.timeline-cell > a:last-of-type
{
    padding-right: 0px;
}
table#timelineTable tr.timeline-step > td.timeline-cell > a:hover
{
    color: #cccccc;
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-resize-handle
{
    width: 100%;
    height: 3px;
    position: absolute;
    bottom: 2px;
    z-index: 90;
    display: block;
    cursor: s-resize;
}
table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-resize-handle:hover
{
     border-bottom: 1px solid;
}


div.tooltip div.tooltip-inner
{
    text-align: left;
}


body .tooltip-arrow {
    display: none;
}

